# CivitAI-DownloadLink-Extractor

./: .gitignore  CSVFromInfoFIles.py  ModelsFromLocalSD.py  README.md  config.ini  extract_links.py  pyproject.toml  requirements.txt
CSVs/: _csv files go here.txt
CivitAI_Info_Files/: realisticVisionV40_v40VAE.civitai.info
src/: CSVFromInfoFIles.py  ModelsFromLocalSD.py  chromelauncher.py  scrape-from-download-history.py
src/civitai_download_link_extractor/: __init__.py  civitai_download_history.py  info_files.py  local_SD.py
src/civitai_download_link_extractor/modules/: __init__.py  civitaihelper.py  csv_handler.py  process_util.py
tests/: test_info_files.py
